--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -14,26 +14,31 @@
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/status"/>
+	<EditText
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/edit_name"
+			android:visibility="gone"/>
 	<Button
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:text="@string/error"
-				android:id="@+id/check_button"
-				android:layout_gravity="center_horizontal"
-				android:layout_marginTop="50dp"
-				android:onClick="onClick"
-				android:visibility="gone"/>
-		<EditText
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/edit_name"
-				android:visibility="gone"/>
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:text="@string/error"
+			android:id="@+id/check_button"
+			android:layout_gravity="center_horizontal"
+			android:onClick="onClick"
+			android:visibility="gone"/>
 	<Button
 			android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
-			android:layout_marginTop="50dp"
 			android:text="@string/web_link"
 			android:onClick="onClick"
-			android:id="@+id/web_button"/>
+			android:id="@+id/web_button"
+			android:visibility="gone"/>
+	<ListView
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/logList"
+			android:layout_gravity="center_horizontal"
+			android:visibility="gone"/>
 </LinearLayout>
 
