--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -34,6 +34,14 @@
 			android:onClick="onClick"
 			android:id="@+id/web_button"
 			android:visibility="gone"/>
+	<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:text="@string/log_label"
+			android:id="@+id/log_label"
+			android:layout_gravity="center_horizontal"
+			android:visibility="gone"/>
 	<ListView
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
